// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jsx 1`] = `
Array [
  Object {
    "identifier": null,
    "key": "测试",
    "loc": Object {
      "column": 18,
      "line": 1,
    },
    "tags": null,
  },
  Object {
    "identifier": null,
    "key": "测试",
    "loc": Object {
      "column": 22,
      "line": 1,
    },
    "tags": null,
  },
]
`;

exports[`should not treat property key path as key 1`] = `Array []`;

exports[`string literal 1`] = `
Array [
  Object {
    "identifier": null,
    "key": "测试",
    "loc": Object {
      "column": 11,
      "line": 1,
    },
    "tags": null,
  },
]
`;

exports[`template literal 1`] = `
Array [
  Object {
    "identifier": null,
    "key": "测试{0}",
    "loc": Object {
      "column": 11,
      "line": 1,
    },
    "tags": null,
  },
]
`;
